# fr3_motion

./: Dockerfile  README.md  docker-compose.yaml
.github/workflows/: docker-build.yaml
src/fr3_motion/: CMakeLists.txt  NOTICE  fr3_motion_controllers.xml  package.xml
src/fr3_motion/config/: controllers.yaml
src/fr3_motion/include/fr3_motion/: cartesian_pose_controller.hpp  joint_impedance_controller.hpp  joint_impedance_with_ik_controller.hpp  setpoint_utils.hpp
src/fr3_motion/launch/: move_group.launch.py
src/fr3_motion/scripts/: example_cartesian_pose_commander  example_joint_impedance_commander  example_joint_impedance_with_ik_commander
src/fr3_motion/src/: cartesian_pose_controller.cpp  joint_impedance_controller.cpp  joint_impedance_with_ik_controller.cpp
src/fr3_motion/test/: test_joint_impedance_controller.launch_test.py
