<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fr3_motion</name>
  <version>0.0.1</version>
  <description>Controllers and utilities for moving Franka Research 3 robots</description>
  <maintainer email="dimas.dutra@mail.wvu.edu">Dimas Abreu Archanjo Dutra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
